# enea-outages-ha

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
custom_components/enea_outages/: __init__.py  binary_sensor.py  config_flow.py  const.py  hacs.json  manifest.json  sensor.py  services.yaml
custom_components/enea_outages/translations/: en.json  pl.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_sensor.py
