[project]
name = "enea-outages-ha"
version = "0.1.0"
description = "Home Assistant integration for Enea power outages"
authors = [
    { name = "TheUndefined" },
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-homeassistant-custom-component",
    "pytest-cov",
    "pytest-httpx",
    "enea-outages==0.3.1",
    "zeroconf",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.setuptools]
packages = ["custom_components"]
